fix navigation alignment in base view - this is caused by a webkit bug that breaks a fixed elements alignment if a parent element has a transform

--- a/app/styles/views/RLOBaseView.scss
+++ b/app/styles/views/RLOBaseView.scss
@@ -1,8 +1,3 @@
-@mixin animationSetting{
-    animation-duration: $duration-long;
-    animation-fill-mode: both;
-    animation-timing-function: $ease-animation;
-}
 @mixin transitionSetting{
     transition-property: transform;
     transition-timing-function:  $ease-animation;
@@ -17,7 +12,7 @@
     &.in {
         // add transition
         opacity: 1;
-        transform: scale(1);
+        transform: none;
     }
     &.out {
         // add transition
@@ -96,13 +91,13 @@
 }
 
 .nav-button-container {
-    height: auto;
-    width: auto;
-    background: $color_nav_button_background;
     position:fixed;
     right: 0;
     bottom: 0;
     padding: $padding-small;
+    height: auto;
+    width: auto;
+    background: $color_nav_button_background;
     z-index: $z-fg;
 }
 
